--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "static web app workflow",
   "keywords": [
     "lbl-pages",
-    "zce"
+    "lbl"
   ],
   "homepage": "https://github.com/leebailin/lbl-pages#readme",
   "bugs": {
@@ -13,9 +13,11 @@
   "license": "MIT",
   "author": "leebailin",
   "files": [
-    "lib"
+    "lib",
+    "bin"
   ],
   "main": "lib/index.js",
+  "bin": "bin/lbl-pages.js",
   "directories": {
     "lib": "lib"
   },
@@ -26,7 +28,23 @@
   "scripts": {
     "lint": "standard --fix"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
+    "browser-sync": "^2.26.12",
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^6.2.0",
+    "gulp-load-plugins": "^2.0.4",
+    "gulp-sass": "^4.1.0",
+    "gulp-swig": "^0.9.1",
+    "gulp-uglify": "^3.0.2",
+    "gulp-useref": "^3.1.6"
+  },
   "devDependencies": {
     "standard": "^14.3.4"
   },
